# los

./: .gitignore  CLAUDE.md  LICENSE  los.cabal
docs/: SESSION_HANDOFF.md
docs/decisions/: 00-effect-system-selection.md
docs/design/: 00-philosophy.md  01-lambda-calculus-paradigm.md
docs/research/: 00-feasibility-analysis.md  01-theoretical-foundations.md  02-existing-systems-analysis.md  03-gc-strategy.md  03-os-history-and-process-model.md  04-dedicated-hardware.md  05-mainframe-supercomputer-os.md
docs/slide/: 00-hsos-overview.md  00-los-overview.md  01-feasibility.md  02-lambda-paradigm.md  03-theoretical-foundations.md  04-existing-systems.md  lt-lambda-kansai.md  lt-lambda-kansai.pptx
kernel/: Makefile  README.md  linker.ld
kernel/boot/: boot.S  io.S
kernel/boot/grub/: grub.cfg
kernel/src/Kernel/: Boot.hs  IO.hs  Keyboard.hs  Login.hs  Shell.hs  VGA.hs
poc/: EffectDemo.hs  README.md
src/LOS/Effect/: Console.hs  Core.hs  FileSystem.hs  State.hs
test/: Main.hs
